maven polyglot + transition to java 17